fixed visibility issue with a div

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -10,7 +10,7 @@
     font-size: 40px;
 }
 
-.result {
+.whosTurn {
     color:#4400cc;
     font-family: 'Lucida Grande';
     font-size: 20px;
